--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Maintainer: vacuumbeef
 Section: metapackages
 Priority: optional
 Build-Depends: debhelper (>= 10),
+	       debhelper-compat (= 13),
 Standards-Version: 4.5.0.3
 
 Package: adaptation-xiaomi-vayu
