--- a/sparse/etc/systemd/system/droidian-adapt-fix-flash-bootimage-xiaomi-vayu.service
+++ b/sparse/etc/systemd/system/droidian-adapt-fix-flash-bootimage-xiaomi-vayu.service
@@ -8,7 +8,7 @@ Before=graphical.target
 Type=oneshot
 Environment=LAUNCHED_BY_SYSTEMD=1
 ExecStartPre=/bin/sleep 1
-ExecStart=/usr/bin/droidian-berb-fix-flash-bootimage-xiaomi-vayu
+ExecStart=/usr/bin/droidian-adapt-fix-flash-bootimage-xiaomi-vayu.sh
 RemainAfterExit=True
 
 [Install]
