--- a/sparse/etc/systemd/system/droidian-adapt-fix-rmnet-con-delayed.service
+++ b/sparse/etc/systemd/system/droidian-adapt-fix-rmnet-con-delayed.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=Fix delayed rmnet connection after sim is unlocked
+Description=Fix delayed rmnet connection after sim is unlocked installer
 Requires=lxc@android.service
 After=phosh.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/droidian-adapt-fix-rmnet-con-delayed.sh
+ExecStart=/usr/bin/droidian-adapt-fix-rmnet-con-delayed-install.sh
 
 RemainAfterExit=True
 
