Remove fix: squeekboard avoid delay
The bug is fixed on Droidian snapshot 99

The fix changes will be reverted by updating adaptation
and the glib version with the upstrem fix
is added to Pre-Depends

Upstream fix: https://github.com/droidian/glib/commit/b095f980e968b92cef9f23e2ed237f86a3348948

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Depends: ${misc:Depends},
 	 linux-bootimage-4.14-190-xiaomi-vayu,
 	 linux-image-4.14-190-xiaomi-vayu,
          inotify-tools,
+Pre-Depends:  libglib2.0-0t64 (>= 2.81.1),
 Conflicts: adaptation-droidian-vayu,
            adaptation-vayu-configs,
 Breaks: adaptation-droidian-vayu,
