(packaging) control: Add some utils to Depends:
less,
vim,
neovim,
git,
curl,
wget,
usbutils,
yubikey-luks,
man,
manpages,
droidian-restart-services-gtk3,

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,17 @@ Depends: ${misc:Depends},
 	 linux-bootimage-4.14-314-xiaomi-vayu,
 	 linux-image-4.14-314-xiaomi-vayu,
          inotify-tools,
+	 less,
+	 vim,
+	 neovim,
+	 git,
+	 curl,
+	 wget,
+	 usbutils,
+	 yubikey-luks,
+	 man,
+	 manpages,
+	 droidian-restart-services-gtk3,
 Pre-Depends:  libglib2.0-0t64 (>= 2.81.1),
 Conflicts: adaptation-droidian-vayu,
            adaptation-vayu-configs,
