(packaging) control: Add some utils to Depends from miatoll:
ofono-binder-plugin,
ofono-configs-binder-common,
droidian-camera,
gstreamer1.0-tools,
mobile-power-saver,
fpd-unlock,
phosh-osk-stub,
mobile-settings,

--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,14 @@ Depends: ${misc:Depends},
 	 man,
 	 manpages,
 	 droidian-restart-services-gtk3,
+	 ofono-binder-plugin,
+         ofono-configs-binder-common,
+         droidian-camera,
+         gstreamer1.0-tools,
+         mobile-power-saver,
+         fpd-unlock,
+	 phosh-osk-stub,
+         mobile-settings,
 Pre-Depends:  libglib2.0-0t64 (>= 2.81.1),
 Conflicts: adaptation-droidian-vayu,
            adaptation-vayu-configs,
