(deps) control: add cpulimit

--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,7 @@ Depends: ${misc:Depends},
 	 yubikey-luks,
 	 man,
 	 manpages,
+	 cpulimit,
 	 droidian-restart-services-gtk3,
 	 ofono-binder-plugin,
          ofono-configs-binder-common,
