(deps) control: add vayu 314 kernel headers

--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Depends: ${misc:Depends},
          adaptation-xiaomi-vayu-configs,
 	 linux-bootimage-4.14-314-xiaomi-vayu,
 	 linux-image-4.14-314-xiaomi-vayu,
+	 linux-headers-4.14-314-xiaomi-vayu,
          inotify-tools,
 	 less,
 	 vim,
