(deps) control: add gnome-tweaks

--- a/debian/control
+++ b/debian/control
@@ -36,6 +36,7 @@ Depends: ${misc:Depends},
          fpd-unlock,
 	 phosh-osk-stub,
          mobile-settings,
+	 gnome-tweaks,
 Conflicts: adaptation-droidian-vayu,
            adaptation-vayu-configs,
 Breaks: adaptation-droidian-vayu,
