(deps) control: Add htop

--- a/debian/control
+++ b/debian/control
@@ -27,6 +27,7 @@ Depends: ${misc:Depends},
 	 man,
 	 manpages,
 	 cpulimit,
+	 htop,
 	 droidian-restart-services-gtk3,
 	 ofono-binder-plugin,
          ofono-configs-binder-common,
