(recomends) control: move droidian-restart-services-gtk3 from deps to recomends

--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,6 @@ Depends: ${misc:Depends},
 	 manpages,
 	 cpulimit,
 	 htop,
-	 droidian-restart-services-gtk3,
 	 ofono-binder-plugin,
          ofono-configs-binder-common,
          droidian-camera,
@@ -38,6 +37,7 @@ Depends: ${misc:Depends},
 	 phosh-osk-stub,
          mobile-settings,
 	 gnome-tweaks,
+Recomends: droidian-restart-services-gtk3,
 Conflicts: adaptation-droidian-vayu,
            adaptation-vayu-configs,
 Breaks: adaptation-droidian-vayu,
