(depends) control: add tilix, fcitx, haruna, mpv, seahorse

--- a/debian/control
+++ b/debian/control
@@ -18,12 +18,17 @@ Depends: ${misc:Depends},
 	 less,
 	 vim,
 	 neovim,
+         tilix,
+         fcitx,
+         haruna,
+         mpv,
 	 wl-clipboard,
 	 git,
 	 curl,
 	 wget,
 	 usbutils,
 	 yubikey-luks,
+         seahorse,
 	 man,
 	 manpages,
 	 cpulimit,
