(depends) control: change kernel subver 314 to 190, move restart-services-gtk3 to depends

--- a/debian/control
+++ b/debian/control
@@ -11,10 +11,11 @@ Architecture: arm64
 Depends: ${misc:Depends},
          adaptation-hybris-api30-phone,
          adaptation-xiaomi-vayu-configs,
-	 linux-bootimage-4.14-314-xiaomi-vayu,
-	 linux-image-4.14-314-xiaomi-vayu,
-	 linux-headers-4.14-314-xiaomi-vayu,
+	 linux-bootimage-4.14-190-xiaomi-vayu,
+	 linux-image-4.14-190-xiaomi-vayu,
+	 linux-headers-4.14-190-xiaomi-vayu,
          inotify-tools,
+         dconf-editor,
 	 less,
 	 vim,
 	 neovim,
@@ -43,7 +44,7 @@ Depends: ${misc:Depends},
 	 phosh-osk-stub,
          mobile-settings,
 	 gnome-tweaks,
-Recomends: droidian-restart-services-gtk3,
+         droidian-restart-services-gtk3,
 Conflicts: adaptation-droidian-vayu,
            adaptation-vayu-configs,
 Breaks: adaptation-droidian-vayu,
